@@ -27,6 +27,8 @@ files_to_copy:
     - name: config/database.yml
     - name: config/extended_version12.yml
     - name: config/extended_version13.yml
+    - name: config/standard_version12.yml
+    - name: config/standard_version13.yml
     - name: db/migrate/001_create_echi_records.rb
     - name: db/migrate/002_create_echi_logs.rb
     - name: examples/extended_version12/chr0003
