@@ -65,3 +65,4 @@
   * Added 'standard' schema definitions for revision 12 & 13 to the config directory
 * Bug fix(es):
   * Fixed bug #14020 issue with binary offset
+  * In binary handling properly insert a Y/N for the booleans
